# branchless-binary-search

./: .gitmodules  CMakeLists.txt  README.md
.circleci/: config.yml
src/: bbsearch.c  bbsearch.h
test/: test_bbsearch.cpp
